basic-ci/tekton/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webhook--el
  namespace: quarkus-app
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: -el
spec:
  to:
    kind: Service
    name: el--el
    weight: 100
  port:
    targetPort: http-listener
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
